--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,88 @@ body, html{
 #container{
     background-color:rgba(239, 246, 224, 0.2);
 }
+
+/*  text */
+
+ 
+body {
+    font-weight: 300;
+    color: #555b6e;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+p {
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+
+/* logo */
+
+#logo img{
+    width:6%;
+
+}
+
+
+#logo img:hover{
+    border: 2px solid #598392;
+
+
+}
+
+/* navigation bar */
+.flex-container  {
+    display: flex;
+  align-items:stretch;
+  align-content: flex-start;
+       
+  }
+  
+
+  .navbar {
+      display:flex; 
+      justify-content: center;
+      flex-direction: row-reverse;
+      gap:5%;
+}
+
+  .navbar a{
+    display: block;
+    padding: 1em;
+    text-decoration: none;
+    color: inherit;
+    background-color: transparent;
+    border-bottom: 1px solid #598392;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 80%;
+
+  }
+
+
+.navbar li {
+    list-style-type: none;
+   
+}
+
+
+.navbar a {
+    text-decoration: none;
+    color: inherit;
+    background-color: transparent;
+    border-bottom: 1px solid #598392;
+    
+}
+
+  .navbar a:hover {
+    border-bottom: 2px solid #598392;
+    border-top: 2px solid #598392;
+    color:#598392;
+   
+}
+
+/*signup button */
+
