--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,4 +99,35 @@ h1, h2 {
 }
 
 /*signup button */
+#signupbtn {
+    display:flex;
+    justify-content: flex-end;
+   
+}
+
+
+#signupbtn a{
+    text-decoration: none;
+    color: inherit;
+    background-color: transparent;
+    border-bottom: 1px solid #598392;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 90%;
+    font-weight: bold;
+    display:block;
+    padding:1%;
+
+   
+    
+}
+
+
+#signupbtn a:hover{
+    border: 2px solid #598392;
+    color:#598392;
+}
+
+#signupbtn i{
+    color:#598392
+    }
 
