--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,3 +131,63 @@ h1, h2 {
     color:#598392
     }
 
+/* hero video and overlay text*/
+#video-outer{
+    width: 100%;
+    overflow: hidden;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    position:relative;
+}
+
+#main-video{
+    min-width: 100%;
+  min-height: 100%;
+ 
+}
+
+
+
+#background{
+    position:absolute;
+    top:auto;
+    left:0;
+    text-align: center;
+    background:rgba(18, 69, 89, 0.3);
+    height:100%;
+    width:100%;
+  
+}
+
+
+
+#background h1 {
+
+    font-size: 500%;
+    color:rgb(	239, 246, 224);
+    text-transform: uppercase;
+}
+
+
+#background h3{
+    color:white;
+}
+
+
+
+#background a{
+    text-decoration: none;
+    color: inherit;
+    font-size:170%;
+}
+
+
+
+#background a:hover{
+    color:#eff6e0;
+    font-size:300%;
+}
+
+
+
